# nn_project

./: CMakeLists.txt  README.md  dextr.cpp  helpers.cpp  main.cpp
